# TRACCIA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: contribute.md  extending.md
examples/: text_cleaning.ipynb
tests/: run_all.py
tests/core/: test_footprint_contract.py  test_step_callable_object.py  test_step_decorator.py  test_trail_fluent_api.py  test_trail_insert_after.py  test_trail_insert_before.py  test_trail_insert_before_missing_target.py  test_trail_remove.py  test_trail_replace.py  test_trail_run_order.py
traccia/: __about__.py  __init__.py
traccia/concretes/: __init__.py
traccia/core/: __init__.py  step.py  trail.py
traccia/interfaces/: __init__.py  footprint.py  footstep.py  path.py
traccia/routes/: __init__.py  path.py  trail.py
traccia/routes/data_miner/: __init__.py  preprocessing.py  use_example.ipynb
traccia/routes/text_cleaning/: temp.py
