[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traccia"
version = "0.1.2"
description = "Transformation & Reactive Actions Chain-based Component Integration Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Emanuele Galiano", email = "empty@fornow.comingsoon" }
]

dependencies = []

[project.urls]
Source = "https://github.com/emanuelegaliano/TRACCIA"