[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traccia"
version = "1.0.0"
description = "Transformation & Reactive Actions Chain-based Component Integration Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Emanuele Galiano", email = "empty@fornow.comingsoon" }
]

# Runtime dependencies (keep empty if the library has no external runtime deps)
dependencies = []

[project.optional-dependencies]
# Development / testing dependencies
dev = [
  "pytest>=7.0",
]

[project.urls]
Source = "https://github.com/emanuelegaliano/TRACCIA"
